# dolphin

./: .egup.branches  .egup.hooks  .egup.refs  .egup.remotes  .egup.stat  .egup.tags  AUTHORS  CMakeLists.txt  DolphinVcsConfig.cmake.in  org.kde.dolphin.FileManager1.service.in  wreathe-file-manager.kdev4
.egup.git-config/: autocrlf-origin-local-single  autocrlf-origins
.egup.stat/: .egup.hooks.egup-stat  .kdev4.egup-stat  CMakeLists.txt.egup-stat  CODE_OF_CONDUCT.md.egup-stat  CONTRIBUTING.md.egup-stat  LICENSE.md.egup-stat  README.md.egup-stat  build.egup-stat  cmake.egup-stat  dfm.egup-stat  doc.egup-stat  org.kde.dolphin.FileManager1.service.in.egup-stat  src.egup-stat  wreathe-file-manager.egup-stat  wreathe-file-manager.kdev4.egup-stat
.egup.stat/.kdev4/: wreathe-file-manager.kdev4.egup-stat
.egup.stat/cmake/: DbusInterfaceMacros.cmake.egup-stat  FindLibraryWithDebug.cmake.egup-stat  FindSoprano.cmake.egup-stat
.egup.stat/dfm/: CMakeLists.txt.egup-stat  application.h.egup-stat  config.cpp.egup-stat  config.h.egup-stat  deletedialog.h.egup-stat  detailsview.h.egup-stat  flow.cpp.egup-stat  flowview.h.egup-stat  fsmodel.h.egup-stat  fsnode.h.egup-stat  icondialog.h.egup-stat  iconprovider.h.egup-stat  infowidget.cpp.egup-stat  interfaces.h.egup-stat  iojob.h.egup-stat  operations.cpp.egup-stat  operations.h.egup-stat  placesview.cpp.egup-stat  propertiesdialog.cpp.egup-stat  settingsdialog.cpp.egup-stat  settingsdialog.h.egup-stat  viewanimator.cpp.egup-stat  viewanimator.h.egup-stat  viewcontainer.cpp.egup-stat
.egup.stat/doc/: default-ui.png.egup-stat  grouping-view.png.egup-stat  index.docbook.egup-stat  locationbar-context-menu.png.egup-stat  locationbar-editable.png.egup-stat  locationbar-places-icon.png.egup-stat  nepomuk-search.png.egup-stat  preferences-general-behavior.png.egup-stat  preferences-navigation.png.egup-stat  preferences-services.png.egup-stat  preferences-startup.png.egup-stat  preferences-viewmodes-icons.png.egup-stat  toolbar-view-appearance.png.egup-stat
.egup.stat/plugins/: ThumbsImages.egup-stat  ThumbsMovies.egup-stat  ThumbsPDF.egup-stat  ThumbsVideos.egup-stat
.egup.stat/src/: CMakeLists.txt.egup-stat  Messages.sh.egup-stat  config-X11.h.cmake.egup-stat  dolphin.desktop.egup-stat  dolphinapplication.cpp.egup-stat  dolphinapplication.h.egup-stat  dolphincontextmenu.cpp.egup-stat  dolphincontextmenu.h.egup-stat  dolphindockwidget.cpp.egup-stat  dolphindockwidget.h.egup-stat  dolphinmainwindow.cpp.egup-stat  dolphinnewfilemenu.cpp.egup-stat  dolphinnewfilemenu.h.egup-stat  dolphinpart.desktop.egup-stat  dolphinpart.h.egup-stat  dolphinpart.rc.egup-stat  dolphinui.rc.egup-stat  dolphinviewcontainer.cpp.egup-stat  dolphinviewcontainer.h.egup-stat  filterbar.egup-stat  libdolphin_export.h.egup-stat  main.cpp.egup-stat  panels.egup-stat  search.egup-stat  settings.egup-stat  statusbar.egup-stat  tests.egup-stat  views.egup-stat  wfm.desktop.egup-stat
.egup.stat/wreathe-file-manager/: 17.08.egup-stat  4.11.egup-stat  4.14.egup-stat  4.7.egup-stat  DolphinVcsConfig.cmake.in.egup-stat
.kdev4/: wreathe-file-manager.kdev4
17.08/: README.md
cmake/: FindSoprano.cmake
cmake-2017jan12/: CMakeCache.txt  CTestTestfile.cmake  DolphinVcsConfig.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake  org.kde.dolphin.FileManager1.service
cmake-2017jan12/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  index.cache.bz2
cmake-2017jan12/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  config-baloo.h  config-dolphin.h  dolphin  dolphin_columnmodesettings.cpp  dolphin_columnmodesettings.h  dolphin_columnmodesettings.moc_parameters  dolphin_compactmodesettings.cpp  dolphin_compactmodesettings.h  dolphin_compactmodesettings.moc_parameters  dolphin_detailsmodesettings.cpp  dolphin_detailsmodesettings.h  dolphin_detailsmodesettings.moc_parameters  dolphin_directoryviewpropertysettings.cpp  dolphin_directoryviewpropertysettings.h  dolphin_directoryviewpropertysettings.moc_parameters  dolphin_export.h  dolphin_folderspanelsettings.cpp  dolphin_folderspanelsettings.h  dolphin_folderspanelsettings.moc_parameters  dolphin_generalsettings.cpp  dolphin_generalsettings.h  dolphin_generalsettings.moc  dolphin_generalsettings.moc_parameters  dolphin_iconsmodesettings.cpp  dolphin_iconsmodesettings.h  dolphin_iconsmodesettings.moc_parameters  dolphin_informationpanelsettings.cpp  dolphin_informationpanelsettings.h  dolphin_informationpanelsettings.moc_parameters  dolphin_placespanelsettings.cpp  dolphin_placespanelsettings.h  dolphin_placespanelsettings.moc_parameters  dolphin_searchsettings.h  (+11 more)
old-src/: dolphinmainwindow.cpp
src/: CMakeLists.txt  dolphinmainwindow.cpp  dolphinmainwindow.h  dolphinpart.desktop  dolphinpart.rc  dolphinui.rc  dolphinviewcontainer.h  libdolphin_export.h  wfm.desktop
src/ark/: CMakeLists.txt  ark_addtoservicemenu.desktop  ark_dndextract.desktop  ark_servicemenu.desktop
src/kitemviews/: kstandarditemlistview.cpp  kstandarditemlistview.h  kstandarditemlistwidget.cpp  kstandarditemlistwidget.h
src/panels/: panel.cpp
src/panels/places/: placesitemsignalhandler.h
src/settings/: dolphin_columnmodesettings.kcfg  dolphin_columnsmodesettings.kcfg  dolphin_columnsmodesettings.kcfgc  dolphin_directoryviewpropertysettings.kcfg  dolphin_generalsettings.kcfg  viewpropertiesdialog.cpp
src/settings/general/: previewssettingspage.cpp
src/settings/kcm/: kcmdolphinviewmodes.cpp
src/settings/navigation/: navigationsettingspage.cpp
src/settings/services/: servicessettingspage.h
src/settings/viewmodes/: columnviewsettingspage.cpp  viewsettingspage.cpp  viewsettingstab.h
src/tests/: CMakeLists.txt  kitemlistcontrollertest.cpp
src/views/: .egup.tags  dolphincolumnview.cpp  dolphincolumnview.cpp.orig  dolphincolumnview.cpp.rej  dolphindirlister.cpp  dolphindirlister.h  dolphindirlister.h.rej  dolphinview.cpp  dolphinview.cpp.orig  dolphinview.cpp.rej  dolphinview.h  dolphinview.h.orig  dolphinview.h.rej  dolphinviewactionhandler.cpp  viewproperties.cpp  viewproperties.cpp.rej  viewproperties.h  viewproperties.h.rej
(+926 files in other folders)
